# 3d_objects

./: .clang-format  .clang-tidy  .gitignore  LICENSE.md  README.md  setup.ps1
project/: CMakeLists.txt
project/blender/: export.py
project/source/: globals.cpp  globals.h  gui_main_window.h  gui_menu_window.h  main.cpp  sys_camera.h  sys_cfg.cpp  sys_cfg.h  sys_collider.h  sys_import.h  sys_mesh.h  sys_object.h  sys_renderer.h  sys_shader.h  sys_state.h  sys_transform.h  utl_constants.h  utl_math_mat3.h  utl_math_mat4.h  utl_math_quat.h  utl_math_vec2.h  utl_math_vec3.h  utl_math_vec4.h  utl_print.h  utl_require.h  utl_rng.h
project/tests/: test_utl_math_mat3.h  test_utl_math_mat4.h  test_utl_math_quat.h  test_utl_math_vec2.h  test_utl_math_vec3.h  test_utl_math_vec4.h  tests.cpp  utl_test.h
